Fixed share url being slightly off-centre vertically

--- a/src/styles/canvas.scss
+++ b/src/styles/canvas.scss
@@ -51,6 +51,7 @@ canvas {
 
 	span {
 		padding: 0.5em;
+		align-self: center;
 	}
 
 	button {
